# aoc2020

./: LICENSE  README.md  aoc2020.cabal  hie.yml  package.yaml  shell.nix  stack.yaml
app/: BUILD.bazel  Main.hs
macros/: BUILD.bazel  defs.bzl
nix/: default.nix  overlays.nix
src/: BUILD.bazel  Day01.hs  Day02.hs  Day03.hs  Day03a.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs
test/: BUILD.bazel  Day01Spec.hs  Day02Spec.hs  Day03Spec.hs  Day04Spec.hs  Day05Spec.hs  Day06Spec.hs  Day07Spec.hs  Day08Spec.hs  Day09Spec.hs  Day10Spec.hs  Day11Spec.hs  Day12Spec.hs  Day13Spec.hs  Day14Spec.hs  Day15Spec.hs
