name:                aoc2020
version:             0.1.0.0
synopsis:            Solutions for AOC2020
description:         Learning Haskell by solving Advent of Code 2020 challenges.
homepage:            https://github.com/dimitrijer/aoc2020#readme
license:             BSD3
license-file:        LICENSE
author:              Dimitrije Radojević
maintainer:          me@dimitrije.website
copyright:           2021 Dimitrije Radojević
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc2020
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
