load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
    "haskell_toolchain_library",
)

haskell_binary(
    name = "main",
    srcs = ["Main.hs"],
    compiler_flags = [
        "-threaded",
        "-rtsopts",
        "-with-rtsopts=-N",
    ],
    data = ["//resources:input"],
    deps = [
        "//src:base",
        "//src:day01",
        "//src:day02",
        "//src:day03",
        "//src:day04",
        "//src:day05",
        "//src:day06",
        "//src:day07",
        "//src:day08",
        "//src:day09",
        "//src:day10",
        "//src:day11",
        "//src:day12",
        "//src:day13",
        "//src:day14",
        "//src:day15",
    ],
)
